...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/currentItemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
            android:textColor="@color/mylightcolor"
            android:textSize="15dp"
            android:text="TextView" />

        <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/flexboxlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap">

...
