<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"


        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#7baaaaaa"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:background="#9b2a95b9"
            android:paddingStart="10dp"
            android:text="TextView"
            android:textColor="@color/mylightcolor"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>