<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.leon4evil.riseofrunelordscharacter.FeatActivity">


    <group android:id="@+id/on_feat_select">
        <item
            android:id="@+id/save"
            android:title="Save" />
    </group>

    <item  android:id="@+id/switchrole"
        android:title="Switch Role"/>

</menu>